--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,14 @@ code {
 
 :root {
   --primary-color: #BFB7A8;
-  --accent-color: #2ecc71;
+  --accent-color: #A67A44;
   --font-color: #434343;
+}
+
+/* 폰트 설정 */
+@font-face {
+  font-family: 'ZillaSlab';
+  src: url('../public/fonts/ZillaSlab-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 }
